--- a/.env.local.example
+++ b/.env.local.example
@@ -1,13 +1,4 @@
-# Google Gemini AI API Key
-GEMINI_API_KEY=AIzaSyAtJUqQHsXvv7E0KoBcry1PNnPFj2B2xhk
-
-# AWS Configuration (for production)
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
-
-# API Endpoints (will be set after AWS deployment)
-NEXT_PUBLIC_API_URL=https://your-api-gateway-url.amazonaws.com/dev
-
-# Optional: For client-side Gemini usage (not recommended for production)
-# NEXT_PUBLIC_GEMINI_API_KEY=your_gemini_api_key_here
+# Copy this file to .env.local and fill in your values
+GEMINI_API_KEY=your_gemini_api_key_here
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+ENVIRONMENT=development
