--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "dependencies": {
+    "@google/genai": "^1.26.0",
     "aws-sdk": "^2.1692.0",
     "isomorphic-dompurify": "^2.30.1",
     "next": "16.0.0",
