--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.26.0",
+    "@vercel/analytics": "^1.5.0",
     "aws-sdk": "^2.1692.0",
     "isomorphic-dompurify": "^2.30.1",
     "next": "16.0.0",
