--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,18 @@
 # Copy this file to .env.local and fill in your values
+
+# Required: Google Gemini API Key
 GEMINI_API_KEY=your_gemini_api_key_here
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Required: Site URL for metadata and social sharing
+# Development: http://localhost:3000
+# Production: https://lionsofzion.io
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# Optional: Environment identifier
 ENVIRONMENT=development
+
+# Optional: AWS Configuration (for production storage)
+# AWS_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=your_aws_key
+# AWS_SECRET_ACCESS_KEY=your_aws_secret
+# DYNAMODB_TABLE_NAME=scam-hunt-analyses
