--- a/vercel.json
+++ b/vercel.json
@@ -32,6 +32,10 @@
         {
           "key": "Permissions-Policy",
           "value": "camera=(), microphone=(), geolocation=()"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://vercel.live https://va.vercel-scripts.com https://cdnjs.buymeacoffee.com https://buymeacoffee.com https://*.buymeacoffee.com; style-src 'self' 'unsafe-inline' https://cdnjs.buymeacoffee.com https://*.buymeacoffee.com; img-src 'self' data: blob: https: https://cdnjs.buymeacoffee.com https://*.buymeacoffee.com; font-src 'self' data: https://cdnjs.buymeacoffee.com https://*.buymeacoffee.com; connect-src 'self' https://generativelanguage.googleapis.com https://vitals.vercel-insights.com https://buymeacoffee.com https://cdnjs.buymeacoffee.com https://*.buymeacoffee.com; frame-src 'self' https://buymeacoffee.com https://*.buymeacoffee.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
         }
       ]
     }
