--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "quality": "npm run type-check && npm run lint:strict && npm run format:check",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
     "analyze": "ANALYZE=true npm run build",
     "clean": "rm -rf .next out dist",
     "prepare": "husky"
@@ -27,20 +23,18 @@
     "@react-three/fiber": "^9.4.0",
     "@vercel/analytics": "^1.5.0",
     "aws-sdk": "^2.1692.0",
+    "framer-motion": "^12.23.24",
     "isomorphic-dompurify": "^2.30.1",
     "nanoid": "^5.1.6",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "three": "^0.180.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^16.0.0",
     "@tailwindcss/postcss": "^4",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -49,8 +43,6 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
