--- a/.env.local
+++ b/.env.local
@@ -1,10 +1,5 @@
-# Google Gemini AI API Key
-GEMINI_API_KEY=AIzaSyAtJUqQHsXvv7E0KoBcry1PNnPFj2B2xhk
+# Google Gemini API Key
+GEMINI_API_KEY="YOUR_GEMINI_API_KEY_HERE"
 
-# AWS Configuration
-AWS_REGION=us-east-1
-# NEXT_PUBLIC_API_URL=https://bp0rqw2q34.execute-api.us-east-1.amazonaws.com/production
-NEXT_PUBLIC_SITE_URL=https://lionsofzion.io
-
-# Development mode
-NODE_ENV=development
+# You can leave this empty for local development if you don't have a specific API gateway URL yet
+NEXT_PUBLIC_API_URL=""
