--- a/.env.local.example
+++ b/.env.local.example
@@ -12,7 +12,8 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 ENVIRONMENT=development
 
 # Optional: AWS Configuration (for production storage)
-# AWS_REGION=us-east-1
-# AWS_ACCESS_KEY_ID=your_aws_key
-# AWS_SECRET_ACCESS_KEY=your_aws_secret
-# DYNAMODB_TABLE_NAME=scam-hunt-analyses
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your_aws_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret
+S3_BUCKET_NAME=your-s3-bucket-name
+DYNAMODB_TABLE_NAME=scam-hunt-analyses
