--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "clean": "rm -rf .next out dist"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.917.0",
+    "@aws-sdk/s3-request-presigner": "^3.917.0",
     "@google/generative-ai": "^0.24.1",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
     "aws-sdk": "^2.1692.0",
     "framer-motion": "^12.23.24",
@@ -30,6 +33,7 @@
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "three": "^0.180.0",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
