feat: Implement contact, privacy, and terms pages with comprehensive content and layout
refactor: Remove unnecessary headers from vercel.json for cleaner configuration

feat: Add ConfirmModal component for user confirmations with loading state

feat: Create Footer component with quick links, social media, and support options

docs: Add detailed Copilot instructions for project structure and developer workflows

--- a/.env.local.example
+++ b/.env.local.example
@@ -11,9 +11,9 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 # Optional: Environment identifier
 ENVIRONMENT=development
 
-# Optional: AWS Configuration (for production storage)
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your_aws_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret
-S3_BUCKET_NAME=your-s3-bucket-name
-DYNAMODB_TABLE_NAME=scam-hunt-analyses
+# Optional: AWS Configuration (NOT CURRENTLY USED - replaced with client-side storage)
+# AWS_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=your_aws_access_key_here
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
+# S3_BUCKET_NAME=your-s3-bucket-name
+# DYNAMODB_TABLE_NAME=scam-hunt-analyses
