--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,22 @@
 # Required Environment Variables
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Optional - AWS Configuration (for production storage)
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your_aws_access_key_id
-AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
-DYNAMODB_TABLE_NAME=scam-hunt-analyses
+# Optional - AWS Configuration (for production storage - NOT CURRENTLY USED)
+# Note: AWS infrastructure has been replaced with client-side storage
+# AWS_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=your_aws_access_key_here
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
+# DYNAMODB_TABLE_NAME=scam-hunt-analyses
 
-# Optional - Application Configuration
-NEXT_PUBLIC_APP_URL=https://your-domain.vercel.app
+# Google Gemini AI
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Site (frontend URL)
+NEXT_PUBLIC_SITE_URL=https://lionsofzion.io
+
+# Dev mode
+NODE_ENV=development
 NEXT_PUBLIC_ENVIRONMENT=production
-
-# Optional - Analytics and Monitoring
-VERCEL_ANALYTICS_ID=your_vercel_analytics_id
 
 # Optional - Security Configuration
 RATE_LIMIT_MAX_REQUESTS=100
