--- a/.env
+++ b/.env
@@ -1,1 +1,20 @@
 GEMINI_API_KEY=AIzaSyAtJUqQHsXvv7E0KoBcry1PNnPFj2B2xhk
+# Copy this file to .env.local and fill in your values
+
+# Required: Google Gemini API Key
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Required: Site URL for metadata and social sharing
+# Development: http://localhost:3000
+# Production: https://lionsofzion.io
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# Optional: Environment identifier
+ENVIRONMENT=development
+
+# Optional: AWS Configuration (NOT CURRENTLY USED - replaced with client-side storage)
+# AWS_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=your_aws_access_key_here
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
+# S3_BUCKET_NAME=your-s3-bucket-name
+# DYNAMODB_TABLE_NAME=scam-hunt-analyses
