Add Vercel KV and Blob integration with environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,29 @@
 # Required Environment Variables
+
+# Google Gemini AI API Key
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Optional - AWS Configuration (for production storage - NOT CURRENTLY USED)
-# Note: AWS infrastructure has been replaced with client-side storage
-# AWS_REGION=us-east-1
-# AWS_ACCESS_KEY_ID=your_aws_access_key_here
-# AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
-# DYNAMODB_TABLE_NAME=scam-hunt-analyses
-
-# Google Gemini AI
-GEMINI_API_KEY=your_gemini_api_key_here
-
-# Site (frontend URL)
+# Site Configuration
 NEXT_PUBLIC_SITE_URL=https://lionsofzion.io
 
-# Dev mode
+# Environment
 NODE_ENV=development
 NEXT_PUBLIC_ENVIRONMENT=production
+
+# Vercel Storage Configuration
+# Note: These are automatically configured when deployed to Vercel
+# Production: https://lionsofzion.io
+# Vercel App: https://newlihunt-40h6q2dax-lionsteam.vercel.app
+
+# Vercel KV (for rate limiting and caching)
+# For local development, get from Vercel dashboard:
+# KV_REST_API_URL=your_kv_rest_api_url
+# KV_REST_API_TOKEN=your_kv_rest_api_token
+# KV_REST_API_READ_ONLY_TOKEN=your_kv_rest_api_read_only_token
+
+# Vercel Blob (for image storage)
+# For local development, get from Vercel dashboard:
+# BLOB_READ_WRITE_TOKEN=vercel_blob_rw_xxxxx
 
 # Optional - Security Configuration
 RATE_LIMIT_MAX_REQUESTS=100
