--- a/.env.local.example
+++ b/.env.local.example
@@ -11,9 +11,17 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 # Optional: Environment identifier
 ENVIRONMENT=development
 
-# Optional: AWS Configuration (NOT CURRENTLY USED - replaced with client-side storage)
-# AWS_REGION=us-east-1
-# AWS_ACCESS_KEY_ID=your_aws_access_key_here
-# AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
-# S3_BUCKET_NAME=your-s3-bucket-name
-# DYNAMODB_TABLE_NAME=scam-hunt-analyses
+# Vercel Storage Configuration (for local development)
+# Note: When deployed to Vercel, these are automatically configured
+# Production: https://lionsofzion.io
+# Vercel App: https://newlihunt-40h6q2dax-lionsteam.vercel.app
+
+# Vercel KV (for rate limiting and caching)
+# Get from Vercel dashboard > Storage > KV:
+# KV_REST_API_URL=your_kv_rest_api_url
+# KV_REST_API_TOKEN=your_kv_rest_api_token
+# KV_REST_API_READ_ONLY_TOKEN=your_kv_rest_api_read_only_token
+
+# Vercel Blob (for image storage)
+# Get from Vercel dashboard > Storage > Blob:
+# BLOB_READ_WRITE_TOKEN=vercel_blob_rw_xxxxx
