--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,10 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env
+.env*.local
 .env.production
 .env.development
-# Keep .env.local and .env.local.example for development
+# Keep .env.example and .env.local.example for reference
 
 # vercel
 .vercel
